2009-08-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/clock.c, include/bsp.h: Rename BSP specific idle thread to
	bsp_idle_thread.

2009-07-30  Eric Norum <norume@aps.anl.gov>

	* include/bsp.h, network/network.c, startup/bspstart.c:  Try enabling
	the data cache.

2009-07-28  Eric Norum <norume@aps.anl.gov>

	PR 1420/bsps
	* startup/bspstart.c: Turn on buffered writes to DRAM. As Device Errata
	SECF124 notes this may cause double writes, but that's not really a big
	problem and benchmarking tests have shown that buffered writes do gain
	some performance.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-06-02  Eric Norum <norume@aps.anl.gov>

	PR 1420/bsps
	* startup/bspstart.c: Turn off buffered writes.

2009-04-28	Chris Johns <chrisj@rtems.org>

	* start/start.S: Update for boot_card command line change.

2009-03-02	Till Straumann <strauman@slac.stanford.edu>

	PR 1375/bsps
	* clock/clock.c: Correct implementation of nanoseconds since last tick
	handler.

2009-02-25	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/clock.c, include/bsp.h: Make bsp idle thread names match.

2009-02-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/clock.c, include/bsp.h: Change prototype of IDLE thread to
	consistently return void * and take a uintptr_t argument.

2009-01-21	Eric Norum <norume@aps.anl.gov>

	PR 1358/bsps
	* clock/clock.c: Fix time-access bug in uc5282 BSP.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, preinstall.am: Use shared stub coverhd.h
	* include/coverhd.h: Removed.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>
